internal class AnimationStrings
{
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string jump = "jump";
    internal static string attack = "attack";
    internal static string yVeclocity = "yVeclocity";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isOnWall = "isOnWall";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hit = "hit";
    internal static string lockVectocity = "lockVeclocity";
    internal static string AttackCooldown = "attackCountDown";
}


